# technopark_hw

./: .gitignore  .travis.yml  CMakeLists.txt  Downloadproject.cmake  README.md  client.py  company.c  company.h  company_test.cpp  counter_cache.py  custom_list.py  desc.py  desc_test.py  fetcher.py  ignore_tags.txt  io.c  io.h  lru.py  main.c  main.py  meta.py  meta_test.py  requirements.txt  server.py  test.py  tests.py  text.py  tools.c  tools.h
files/: objs_rank
files/users/: .gitkeep
generator/: generator.c
include/: generator.h  libdata_tools.h  libdataproc.h  libdataproc_consistent.h  libdataproc_parallel.h  libdtools.h  obj_user_struct.h  timer.h  tools.h
lib_consistent/: libdataproc.c  libdataproc_consistent.c  tools.c
lib_parallel/: libdataparallel.c  libdataproc_parallel.c  tools.c
notebooks/: analysis.ipynb
src/: main.c  timer.c  train_pipeline.py
st_lib/: libdataproc.c  tools.c
tests/: gtests.cpp
